--- a/index.jade
+++ b/index.jade
@@ -44,8 +44,8 @@ head
 	//Agora Style
 	link(rel="stylesheet" href="css/agora-style.css")
 
-	//Style Modal
-	link(rel="stylesheet" href="css/modal.css")
+	//Style modal
+	link(rel="stylesheet" href="css/agora-modal.css")
 
 	//Agora FrameWork
 	link(rel="stylesheet" href="css/agora-frameWork.css")
