Modal--Se modifico el estilo utilizado layout grid

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -52,6 +52,9 @@ head
 
 	//Agora Media Queris
 	link(rel="stylesheet" href="css/agora-mediaQueries.css")
+
+	//Agora Media Queris
+	link(rel="stylesheet" href="css/grid.css")
 	
 
 body
@@ -199,19 +202,21 @@ body
 			span.weight300 team
 		div.equipo__tarjetas
 			
-			div.equipo__perfil
+			div.jose.equipo__perfil
 				div.equipo__marcoImagen
 					img.equipo__imagen(src="images/perfil_integrante.svg")
-				h3.nombre__integrante 
-							span.weight400 Socio 
-							span.weight100 Desarrollador
 
-				p.descripcion__integrante Reseña
-				div.equipo__tags
+				div.informacion__integrante
+					h3.nombre__integrante
+						span.weight400 Socio 
+						span.weight100 Desarrollador
+					p.descripcion__integrante Reseña
+
+				div.tags__integrante
 					div.tag CSS
 					div.tag Data Base
 
-			div.equipo__perfil
+			div.ingrid.equipo__perfil
 				div.equipo__marcoImagen
 					img.equipo__imagen(src="images/perfil_integrante.svg")
 				h3.nombre__integrante 
@@ -220,11 +225,11 @@ body
 
 
 				p.descripcion__integrante Reseña
-				div.equipo__tags
+				div.tags__integrante
 					div.tag Public Relation
 					div.tag Comunnity Manager
 
-			div.equipo__perfil
+			div.kalollero.equipo__perfil
 				div.equipo__marcoImagen
 					img.equipo__imagen(src="images/perfil_integrante.svg")
 				h3.nombre__integrante 
@@ -233,7 +238,7 @@ body
 
 
 				p.descripcion__integrante Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.
-				div.equipo__tags
+				div.tags__integrante
 					div.tag UX Desing
 					div.tag HTML
 					div.tag FrontEnd
