--- a/grid.jade
+++ b/grid.jade
@@ -9,9 +9,55 @@ head
 	//Style modal
 	link(rel="stylesheet" href="css/grid.css")
 body
-	.contenedor__modal
-		.imagenEvento__modal
-			p imagen
-		.informacionEvento__modal
-			p info
 	
+	//SECCIÓN Equipo
+	section#equipo.equipo.flexBox__Column
+		h2
+			span.weight100 ágora 
+			span.weight300 team
+		div.equipo__tarjetas
+			
+			div.jose.equipo__perfil
+				div.equipo__marcoImagen
+					img.equipo__imagen(src="images/perfil_integrante.svg")
+				h3.nombre__integrante 
+							span.weight400 Socio 
+							span.weight100 Desarrollador
+
+				p.descripcion__integrante Reseña
+				div.equipo__tags
+					div.tag CSS
+					div.tag Data Base
+
+			div.ingrid.equipo__perfil
+				div.equipo__marcoImagen
+					img.equipo__imagen(src="images/perfil_integrante.svg")
+				h3.nombre__integrante 
+							span.weight400 Ingrid 
+							span.weight100 Rguez
+
+
+				p.descripcion__integrante Reseña
+				div.equipo__tags
+					div.tag Public Relation
+					div.tag Comunnity Manager
+
+			div.kalollero.equipo__perfil
+				div.equipo__marcoImagen
+					img.equipo__imagen(src="images/perfil_integrante.svg")
+				h3.nombre__integrante 
+							span.weight400 Kalóllero 
+							span.weight100 Marro.on
+
+
+				p.descripcion__integrante Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.
+				div.equipo__tags
+					div.tag UX Desing
+					div.tag HTML
+					div.tag FrontEnd
+					div.tag CSS
+					div.tag Advertising
+					div.tag JavaScript
+					div.tag Desing
+					div.tag Prototyping
+					div.tag UI Desing
