Modal--estilos a modal

--- a/modal.jade
+++ b/modal.jade
@@ -50,40 +50,45 @@ head
 	//Agora Media Queris
 	//- link(rel="stylesheet" href="css/agora-mediaQueries.css")
 
-	//Style modal
-	link(rel="stylesheet" href="css/grid.css")
+	//- //Style modal
+	//- link(rel="stylesheet" href="css/grid.css")
 
 	
 
 body
-	div.contenedor
-		div.contenedor__modal
-			div.imagenEvento__modal
-				img.cartel__modal(src="images/5.jpg")
-			div.informacionEvento__modal
-				p.tipoEvento__modal Feria
-				p.nombreEvento__modal Feria Nacional del Libro Infantil y Juvenil 2017
-				p.fechaEvento__modal
-					span 21 de Julio 2017
-					span &nbsp al &nbsp
-					span 30 de Julio 2017
-				p.horaEvento__modal
-					span 10:00 hrs
-					span &nbsp a &nbsp
-					span 20:00 hrs
-				div.descripcionEvento__modal Descripción del Evento
-				div.accesoEvento__modal Acceso Libre
-				p.sedeEvento__modal Colegio Preparatorio de Xalapa
-				p.direccionEvento__modal Dirección de la Sede
-				p.ciudadEvento__modal Xalapa~Enríquez
-				div.organizador__modal
-					img.organizadorEventoImgPerfil__modal(src="images/luna.png")
-					p.organizadorEventoNombre__modal Instituto Veracruzano de Cultura | IVEC
-				div.redesSociales__modal
-					a.tooltip-top(href="" data-tooltip="Tooltip Facebook"): i.icon-facebook.icono-modal
-					a.tooltip-top(href="" data-tooltip="Tooltip Twitter"): i.icon-twitter.icono-modal
-					a.tooltip-top(href="" data-tooltip="Tooltip Instagram"): i.icon-instagram.icono-modal
-					a.tooltip-top(href="" data-tooltip="Tooltip Teléfono"): i.icon-telefono.icono-modal
-					a.tooltip-top(href="" data-tooltip="Tooltip Dirección"): i.icon-direccion.icono-modal
-			//- div.cerrar
-			//- 	a(href="index.html") x
+	div.contenedor__modal
+		div.imagenEvento__modal
+			img.cartel__modal(src="images/5.jpg")
+		div.informacionEvento__modal
+			p.tipoEvento__modal Feria
+			p.nombreEvento__modal Feria Nacional del Libro Infantil y Juvenil 2017
+			p.fechaEvento__modal
+				span 21 de Julio 2017
+				span &nbsp al &nbsp
+				span 30 de Julio 2017
+			p.horaEvento__modal
+				span 10:00 hrs
+				span &nbsp a &nbsp
+				span 20:00 hrs
+			div.descripcionEvento__modal Descripción del Evento
+			div.accesoEvento__modal Acceso Libre
+			p.sedeEvento__modal Colegio Preparatorio de Xalapa
+			p.direccionEvento__modal Dirección de la Sede
+			p.ciudadEvento__modal Xalapa~Enríquez
+			div.organizador__modal
+				img.organizadorEventoImgPerfil__modal(src="images/luna.png")
+				p.organizadorEventoNombre__modal Instituto Veracruzano de Cultura | IVEC
+			div.redesSociales__modal
+				a.tooltip-top(href="" data-tooltip="Tooltip Facebook"): i.icon-facebook.icono-modal
+				a.tooltip-top(href="" data-tooltip="Tooltip Twitter"): i.icon-twitter.icono-modal
+				a.tooltip-top(href="" data-tooltip="Tooltip Instagram"): i.icon-instagram.icono-modal
+				a.tooltip-top(href="" data-tooltip="Tooltip Teléfono"): i.icon-telefono.icono-modal
+				a.tooltip-top(href="" data-tooltip="Tooltip Dirección"): i.icon-direccion.icono-modal
+		div.cerrar
+			a(href="index.html") x
+		
+	
+
+
+	div.fond
+		img.imagen_fondo(src="images/1.jpg")
