--- a/css/agora-modal.css
+++ b/css/agora-modal.css
@@ -1,22 +1,18 @@
-.contenedor {
+body{
+	overflow: hidden;
+}
+
+.contenedor__modal {
 	position: fixed;
 	width: 100%;
-	height: auto;
+	height: 100%;
 	top: 0;
 	left: 0;
   	z-index: 29;
   	overflow-y: auto;
   	background: rgba(0, 0, 0, 0.88);
-	/*display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-flow: column;*/
+	display: grid;
 	padding: 1rem;
-}
-
-.contenedor__modal {
-	width: 100%;
-	height: 100%;
 }
 
 .imagenEvento__modal{
@@ -25,6 +21,7 @@
 	justify-content: center;
 	align-content: center;
 	flex-flow: column;
+	z-index: 40;
 }
 
 .informacionEvento__modal{
@@ -32,16 +29,23 @@
 	text-align: left;
 	color: #2b2b2b;
 	padding: 1rem 2rem;
+	z-index: 40;
 }
+
+
+
+
+
 
 .tipoEvento__modal {
 	text-align: right;
-    font-size: 1.25rem;
-    font-weight: 300;
+    font-size: 1.2rem;
+    font-weight: 200;
 }
 
 .nombreEvento__modal {
 	margin: .5rem 0rem;
+	font-weight: 600;
 }
 
 .fechaEvento__modal {
@@ -89,6 +93,7 @@
 	color: var(--oxford);
 }
 
+/*--tooltip*/
 		[data-tooltip], .tooltip {
 		  position: relative;
 		  cursor: pointer;
@@ -216,25 +221,27 @@
 
 /*////---- M O D A L ----\\\\*/
 
-	.contenedor__modal {
-		
-	}
-	
-	.imagenEvento__modal {
-		/*height: auto;
-		width: 80%;*/
+	.contenedor__modal{
+		grid-template-columns: 1rem auto 1rem;
+		grid-template-rows: .1fr 1fr 1fr .1fr;
 	}
 
+	.imagenEvento__modal {
+		grid-row:2 / 3;
+		grid-column: 2 / 3;
+	}
+	
 	.cartel__modal {
 		max-width: 100%;
 	    height: auto;
 	    border-radius: 4px 4px 0px 0px;
 	}
-	
-	.informacionEvento__modal {
-		/*height: auto;
-		width: 80%;*/
+
+	.informacionEvento__modal{
+		grid-row: 3 / 4;
+		grid-column: 2 / 3;	
 	}
+
 
 /*sm*/
 @media (min-width:576px)  {
@@ -258,17 +265,17 @@
 
 /*////---- M O D A L ----\\\\*/
 
-	.contenedor__modal {
-		/*flex-flow: row;
-		position: fixed;*/
+	.contenedor__modal{
+		grid-template-columns: .1fr 1fr 1fr .1fr;
+		grid-template-rows: 2rem auto 2rem;
 	}
-	
+
 	.imagenEvento__modal {
-		/*height: 95%;
-		width: 45%;*/
+		grid-row: 2 / 3;
+		grid-column: 2 / 3;
 		text-align: center;
 	}
-				
+	
 	.cartel__modal {
 		max-height: 100%;
 	    width: auto;
@@ -276,9 +283,10 @@
 	}
 
 	.informacionEvento__modal {
-		/*height: 95%;
-		width: 45%;*/
+		grid-row: 2 / 3;
+		grid-column: 3 / 4;
 	}
+				
 }
 
 /*xl*/
