Modal--se realizaron actualizaciones

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -30,7 +30,7 @@ head
 		Facebook:   https://www.facebook.com/agoraink
 		//////////////////////////////////////////////////////
 
-	title ágora | Descubre el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; crea el espacio para el evento que organizas y que todos lo vean
+	title ágora | Landing Page
 	
 	//Icono Pestaña
 	link(rel="icon" type="image/png" href="images/icon.png")
