--- a/css/agora-modal.css
+++ b/css/agora-modal.css
@@ -10,13 +10,13 @@ body{
 	left: 0;
   	z-index: 29;
   	overflow-y: auto;
-  	background: rgba(0, 0, 0, 0.88);
+  	background: var(--ahuesado);
 	display: grid;
-	padding: 1rem;
+	padding: 2rem;
 }
 
 .imagenEvento__modal{
-	background-color: rgba(0, 0, 0, 0.88); /*rgba(12, 12, 12, 1);*/
+	background-color: var(--marfil); /*rgba(12, 12, 12, 1);*/
 	display: flex;
 	justify-content: center;
 	align-content: center;
@@ -25,7 +25,7 @@ body{
 }
 
 .informacionEvento__modal{
-	background-color: rgba(251,251,251,1);
+	background-color: var(--ceniza);
 	text-align: left;
 	color: #2b2b2b;
 	padding: 1rem 2rem;
@@ -89,127 +89,37 @@ body{
 	color: var(--oxford);
 }
 
-/*--tooltip*/
-		[data-tooltip], .tooltip {
-		  position: relative;
-		  cursor: pointer;
-		}
 
-		[data-tooltip]:before,
-		[data-tooltip]:after,
-		.tooltip:before,
-		.tooltip:after {
-		  position: absolute;
-		  visibility: hidden;
-		  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-		  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-		  opacity: 0;
-		  -webkit-transition: 
-		      opacity 0.2s ease-in-out,
-		        visibility 0.2s ease-in-out,
-		        -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
-		    -moz-transition:    
-		        opacity 0.2s ease-in-out,
-		        visibility 0.2s ease-in-out,
-		        -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
-		    transition:         
-		        opacity 0.2s ease-in-out,
-		        visibility 0.2s ease-in-out,
-		        transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
-		  -webkit-transform: translate3d(0, 0, 0);
-		  -moz-transform:    translate3d(0, 0, 0);
-		  transform:         translate3d(0, 0, 0);
-		  pointer-events: none;
-		}
+.cerrar, .anterior, .siguiente, .compartir {
+	    width: 1.75rem;
+   		height: 1.75rem;
+	    color: white;
+	    /*border: 1px solid white;*/
+	    background-color: var(--profundo);
+	    display: flex;
+	    justify-content: center;
+	    align-items: center;
+	    line-height: 1;
+	    font-size: 50%;
+	    margin: 1rem 0;
+	}
 
-		/* Show the entire tooltip on hover and focus */
-		[data-tooltip]:hover:before,
-		[data-tooltip]:hover:after,
-		[data-tooltip]:focus:before,
-		[data-tooltip]:focus:after,
-		.tooltip:hover:before,
-		.tooltip:hover:after,
-		.tooltip:focus:before,
-		.tooltip:focus:after {
-		  visibility: visible;
-		  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-		  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-		  opacity: 1;
-		}
+.anterior, .siguiente {
+	margin: .25rem 0;
+}
 
-		/* Base styles for the tooltip's directional arrow */
-		.tooltip:before,
-		[data-tooltip]:before {
-		  z-index: 1001;
-		  border: 6px solid transparent;
-		  background: transparent;
-		  content: "";
-		}
+/*.compartir {
+	transform: rotate(-45deg);
+}*/
 
-		/* Base styles for the tooltip's content area */
-		.tooltip:after,
-		[data-tooltip]:after {
-		  z-index: 1000;
-		  padding: 8px;
-		  width: 160px;
-		  background-color: #000;
-		  background-color: hsla(0, 0%, 20%, 0.9);
-		  color: #fff;
-		  content: attr(data-tooltip);
-		  font-size: 14px;
-		  line-height: 1.2;
-		}
-
-		/* Directions */
-
-		/* Top (default) */
-		[data-tooltip]:before,
-		[data-tooltip]:after,
-		.tooltip:before,
-		.tooltip:after,
-		.tooltip-top:before,
-		.tooltip-top:after {
-		  bottom: 100%;
-		  left: 50%;
-		}
-
-		[data-tooltip]:before,
-		.tooltip:before,
-		.tooltip-top:before {
-		  margin-left: -6px;
-		  margin-bottom: -12px;
-		  border-top-color: #000;
-		  border-top-color: hsla(0, 0%, 20%, 0.9);
-		}
-
-		/* Horizontally align top/bottom tooltips */
-		[data-tooltip]:after,
-		.tooltip:after,
-		.tooltip-top:after {
-		  margin-left: -80px;
-		}
-
-		[data-tooltip]:hover:before,
-		[data-tooltip]:hover:after,
-		[data-tooltip]:focus:before,
-		[data-tooltip]:focus:after,
-		.tooltip:hover:before,
-		.tooltip:hover:after,
-		.tooltip:focus:before,
-		.tooltip:focus:after,
-		.tooltip-top:hover:before,
-		.tooltip-top:hover:after,
-		.tooltip-top:focus:before,
-		.tooltip-top:focus:after {
-		  -webkit-transform: translateY(-12px);
-		  -moz-transform:    translateY(-12px);
-		  transform:         translateY(-12px); 
-		}	
-
-.cerrar {
-	
-}	
-
+.menu__imagenes {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-flow: column;
+	justify-content: space-between;
+	align-items: flex-end;
+}
 /*////////////////  MEDIA QUERIES ////////////////*/
 
 /*@ media min-width:0px a max-width:575 xs*/ 
@@ -218,13 +128,14 @@ body{
 /*////---- M O D A L ----\\\\*/
 
 	.contenedor__modal{
-		grid-template-columns: 1rem auto 1rem;
-		grid-template-rows: .1fr 1fr 1fr .1fr;
+		grid-template-columns: 2rem auto 2rem;
+		grid-template-rows: 1rem 1fr 1fr 1rem;
 	}
 
 	.imagenEvento__modal {
-		grid-row:2 / 3;
+		
 		grid-column: 2 / 3;
+		grid-row:2 / 3;
 	}
 	
 	.cartel__modal {
@@ -233,11 +144,20 @@ body{
 	    border-radius: 4px 4px 0px 0px;
 	}
 
-	.informacionEvento__modal{
-		grid-row: 3 / 4;
+	.informacionEvento__modal {
 		grid-column: 2 / 3;	
+		grid-row: 3 / 4;
 	}
 
+	.cerrar {
+		grid-column: 3;
+	    grid-row: 2;
+	}
+	
+	.menu__imagenes {
+		grid-column: 1;
+	    grid-row: 2;
+	}
 
 /*sm*/
 @media (min-width:576px)  {
@@ -262,13 +182,13 @@ body{
 /*////---- M O D A L ----\\\\*/
 
 	.contenedor__modal{
-		grid-template-columns: .1fr 1fr 1fr .1fr;
+		grid-template-columns: 1rem 1fr 1fr 1rem;
 		grid-template-rows: 2rem auto 2rem;
 	}
 
 	.imagenEvento__modal {
-		grid-row: 2 / 3;
 		grid-column: 2 / 3;
+		grid-row: 2 / 3;
 		text-align: center;
 	}
 	
@@ -279,8 +199,13 @@ body{
 	}
 
 	.informacionEvento__modal {
-		grid-row: 2 / 3;
 		grid-column: 3 / 4;
+		grid-row: 2 / 3;
+	}
+
+	.cerrar {
+		grid-column: 4;
+		grid-row: 2 / 3;
 	}
 				
 }
