--- a/css/normalize.css
+++ b/css/normalize.css
@@ -23,6 +23,7 @@ body {
   --navy: rgba(0, 7, 36, 1);
   --anaranjado: #e62117;
   --blanco: rgba(255, 255, 255, 1);
+  --ceniza: rgba(251,251,251,1);
   --ahuesado: rgba(242, 243, 248, 1);
   --marfil: rgba(237, 239, 244, 1);
   --claro: rgba(224, 224, 224, 1);
@@ -34,6 +35,7 @@ body {
   --profundo:rgba(23, 23, 23, 1);
   --ahuesadoTransparente: rgba(237, 239, 244, .5);
   --tenueTransparente: rgba(129, 129, 129, .5);
+  /*--sombra*/
 }
 
 
