Modal--se ingreso el código jQuery y html para que funcionara

--- a/css/agora-modal.css
+++ b/css/agora-modal.css
@@ -10,7 +10,7 @@ body{
 	left: 0;
   	z-index: 29;
   	overflow-y: auto;
-  	background: var(--ahuesado);
+  	background: var(--ahuesadoTransparente);
 	display: grid;
 	padding: 2rem;
 }
