--- a/modal.jade
+++ b/modal.jade
@@ -58,7 +58,7 @@ head
 body
 	div.contenedor__modal
 		div.imagenEvento__modal
-			img.cartel__modal(src="images/5.jpg")
+			img.cartel__modal.imagen-fluida(src="images/5.jpg")
 		div.informacionEvento__modal
 			p.tipoEvento__modal Feria
 			p.nombreEvento__modal Feria Nacional del Libro Infantil y Juvenil 2017
@@ -84,8 +84,6 @@ body
 				a.tooltip-top(href="" data-tooltip="Tooltip Instagram"): i.icon-instagram.icono-modal
 				a.tooltip-top(href="" data-tooltip="Tooltip Teléfono"): i.icon-telefono.icono-modal
 				a.tooltip-top(href="" data-tooltip="Tooltip Dirección"): i.icon-direccion.icono-modal
-		div.cerrar
-			a(href="index.html"): i.icon-cerrar
 
 		div.menu__imagenes
 			div.compartir
@@ -93,9 +91,3 @@ body
 			div
 				i.anterior.icon-anterior
 				i.siguiente.icon-siguiente
-		
-	
-
-
-	div.fondoignorar
-		img.imagen_fondo(src="images/1.jpg")
