--- a/subeTuEvento.jade
+++ b/subeTuEvento.jade
@@ -77,8 +77,8 @@ body#inicio
 	//- 	div: i.icon-a
 	//- 	div: i.icon-menu
 	
-	//Back
-	a.volver.flexRow(href="#inicio"): i.icon-back.icono--menu
+	//- //Back
+	//- a.volver.flexRow(href="#inicio"): i.icon-back.icono--menu
 
 	//SECCIÓN INICIO 
 	section#inicio.inicio.flexBox__Row
