LandingPage--se modifico el estilo de la sección Equipo utilizando layout Grid convirtiendolo en responsivo

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -38,10 +38,10 @@ head
 	//Icon Font
 	link(href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet")
 
-	//Normalize
+	//Normalize--
 	link(href="css/normalize.css" rel="stylesheet")
 
-	//Landing Page
+	//Landing Page--
 	link(rel="stylesheet" href="css/agora-landingPage.css")
 	
 	//Landing Page
@@ -50,7 +50,7 @@ head
 	//Framework Agora
 	link(rel="stylesheet" href="css/agora-frameWork.css")
 
-	//Agora Media Queris
+	//Agora Media Queris--
 	link(rel="stylesheet" href="css/agora-mediaQueries.css")
 
 	//Agora Media Queris
@@ -204,12 +204,10 @@ body
 			div.jose.equipo__perfil
 				div.equipo__marcoImagen
 					img.equipo__imagen(src="images/perfil_integrante.svg")
-
-				div.informacion__integrante
-					h3.nombre__integrante
-						span.weight400 Socio 
-						span.weight100 Desarrollador
-					p.descripcion__integrante Reseña
+				h3.nombre__integrante
+					span.weight400 Socio 
+					span.weight100 Desarrollador
+				p.descripcion__integrante Reseña
 
 				div.tags__integrante
 					div.tag CSS
@@ -237,6 +235,7 @@ body
 
 
 				p.descripcion__integrante Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.
+				
 				div.tags__integrante
 					div.tag UX Desing
 					div.tag HTML
@@ -247,6 +246,8 @@ body
 					div.tag Desing
 					div.tag Prototyping
 					div.tag UI Desing
+
+				div.redesSociales__integrante F & T & L
 
 	//SECCIÓN PIE
 	section.pie
