--- a/subeTuEvento.jade
+++ b/subeTuEvento.jade
@@ -79,7 +79,7 @@ body#inicio
 	
 	//- //Back
 	//- a.volver.flexRow(href="#inicio"): i.icon-back.icono--menu
-
+div.contenedor
 	//SECCIÓN INICIO 
 	section#inicio.inicio.flexBox__Row
 		div.inicio__informacion
@@ -103,12 +103,12 @@ body#inicio
 			
 		
 	//SECCIÓN ENVÍA
-	section#comunica.comunica.flexBox__Row
-		div.comunica__info.moduloIzq 
+	section#sube.sube.flexBox__Row
+		div.sube__info.moduloIzq 
 			h2.nombre__seccion Envía
 			p.informacion__seccion Destaca la información importante y exhibe la imagen gráfica para atraer mas usuarios.
 			p.informacion__seccion Envía todos tus eventos que estén próximos a suceder.
-		div.comunica__imagen.moduloDer
+		div.sube__imagen.moduloDer
 
 	//SECCIÓN TIEMPOS
 	section#tiempos.tiempos.flexBox__Row
