--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -52,9 +52,28 @@
 		  height: auto;
 		}
 
+/*////---- M O D A L ----\\\\*/
+	.contenedor__modal{
+	display: grid;
+	grid-template-columns: 2rem auto 2rem;
+	grid-template-rows: 2rem 1fr 1fr 2rem;
+	}
+
+	.imagenEvento__modal {
+		grid-row:2 / 3;
+		grid-column: 2 / 3;
+		margin: 0;
+	}
+
+	.informacionEvento__modal{
+		grid-row: 3 / 4;
+		grid-column: 2 / 3;	
+		margin: 0;
+	}
+
 /*////---- S U B E - T U  - E V E N T O  ----\\\\*/
 
-	.formas, .sube, .tiempos, .pie--subirTuEvento {
+	.formas, .sube, .tiempos {
 		width: 100%;
 		height: 80%;
 	}
@@ -99,43 +118,44 @@
 	}	
 
 	/* Inicio*/
-	.inicio {
-		height: 100%;
-		margin-top: 2rem;
-	}
-	
-	.inicio_imagen {
-		display: none;
-	}
+		.inicio {
+			height: 100%;
+			margin-top: 2rem;
+			text-align: center;
+		}
+		
+		.inicio_imagen {
+			display: none;
+		}
 
-	.inicio__informacion {	
-		align-items: center;
-		padding: 0;
-	}
+		.inicio__informacion {	
+			align-items: center;
+			padding: 0;
+		}
 
-	.inicio--titulo {
-		font-size: 2rem;
-		font-weight: 400;
-		line-height: 1.1;
-	}
+		.inicio--titulo {
+			font-size: 2rem;
+			font-weight: 400;
+			line-height: 1.1;
+		}
 
-	.inicio--texto {
-		font-size: 80%;
-		margin-top: 1rem;
-	}
+		.inicio--texto {
+			font-size: 80%;
+			margin-top: 1rem;
+		}
 	
 	/* ágora */
-	.agora--imagen {
-		margin: .5rem;
-		width: 90%;
-	}
-	
-	.agora--texto {
-		margin: .5rem;
-		font-size: 1rem;
-		font-weight: 400;
-		line-height: 1.1;
-	}
+		.agora--imagen {
+			margin: .5rem;
+			width: 90%;
+		}
+		
+		.agora--texto {
+			margin: .5rem;
+			font-size: 1rem;
+			font-weight: 400;
+			line-height: 1.1;
+		}
 
 	/* Equipo */
 	.equipo__tarjetas {
@@ -146,32 +166,32 @@
 	}
 
 	.equipo__perfil {
-		justify-content: space-between;
+		/*justify-content: space-between;*/
 	}
 	
 	/* Pie */
-	.pie {
-		display: flex;
-		flex-flow: column;
-		justify-content: center;
-		align-items: center;
-		padding: .5rem;
-	}
+		.pie {
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			align-items: center;
+			padding: .5rem;
+		}
 
-	.pie__dReservados{
-		width: 80%;
-		text-align: center;
-		display: none;
-	}
+		.pie__dReservados{
+			width: 80%;
+			text-align: center;
+			display: none;
+		}
 
-	.pie__logo{
-		width: 80%;
-	}
+		.pie__logo{
+			width: 80%;
+		}
 
-	.pie__redesSociales{
-		width: 80%;
-		text-align: center;
-	}
+		.pie__redesSociales{
+			width: 80%;
+			text-align: center;
+		}
 
 /*sm*/
 @media (min-width:576px)  {
@@ -205,6 +225,7 @@
 	/**Inicio*/
 	.inicio__informacion {	
 		padding: 0 1rem;
+		text-align: center;
 	}
 
 	/*ágora*/
@@ -299,6 +320,23 @@
 		.menuNavegacionApaisado {
 			display: none;
 		}
+
+/*////---- M O D A L ----\\\\*/
+	.contenedor__modal{
+		grid-template-columns: 2rem 1fr 1fr 2rem;
+		grid-template-rows: 2rem auto 2rem;
+	}
+
+	.imagenEvento__modal {
+		grid-row: 2 / 3;
+		grid-column: 2 / 3;
+
+	}
+
+	.informacionEvento__modal {
+		grid-row: 2 / 3;
+		grid-column: 3 / 4;
+	}	
 	
 /*////---- S U B E - T U  - E V E N T O  ----\\\\*/
 	.formas, .sube, .tiempos {
@@ -316,48 +354,49 @@
 		height: 80vh;
 	}
 	
-	/**Inicio*/
-	.inicio__informacion {	
-		padding: 0 3rem;
-	}
+	/*Inicio*/
+		.inicio {
+			width: 100%;
+		}
+
+		.inicio__informacion {	
+			padding: 0 3rem;
+		}
 
 	/* ágora */
-	.agora--imagen {
-		margin: 2rem;
-		width: 75%;
-	}
-	
-	.agora--texto {
-		margin: 1rem;
-		font-size: 2.5rem;
-		font-weight: 400;
-		line-height: 1.1;
-	}
-
-	
+		.agora--imagen {
+			margin: 2rem;
+			width: 75%;
+		}
+		
+		.agora--texto {
+			margin: 1rem;
+			font-size: 2.5rem;
+			font-weight: 400;
+			line-height: 1.1;
+		}
 
 	/* Pie */
+		.pie {
+			flex-flow: row;
+			justify-content: center;
+			align-items: center;
+			padding: .5rem;	
+		}
 
-	.pie {
-		flex-flow: row;
-		justify-content: center;
-		align-items: center;
-		padding: .5rem;	
-	}
+		.pie__dReservados{
+			width: 20%;
+			text-align: left;
+		}
 
-	.pie__dReservados{
-		width: 20%;
-		text-align: left;
-	}
+		.pie__logo{
+			width: 50%;
+		}
 
-	.pie__logo{
-		width: 50%;
-	}
-
-	.pie__redesSociales{
-		width: 30%;
-		text-align: right;
-	}
+		.pie__redesSociales{
+			width: 30%;
+			text-align: right;
+		}
 }
 
 /*lg*/
