--- a/css/agora-style.css
+++ b/css/agora-style.css
@@ -107,7 +107,7 @@
     right: 2rem;
     z-index: 41;
 	border: 0;
-    color: var(--claro);
+    color: var(--profundoTransparente);
     background-color: transparent;
     font-size: 50%;
     font-size: 1.5rem;  
@@ -127,7 +127,7 @@
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
-	background-color: var(--blanco);
+	background-color: var(--profundoTransparente);
 	z-index: 40;
 }
 
