--- a/css/agora-subeTuEvento.css
+++ b/css/agora-subeTuEvento.css
@@ -1,6 +1,27 @@
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column;
+	margin: 0;
 
+}
+
+.contenedor {
+	height: 100%;
+	width: 90%;
+	background-color: var(--blanco);
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	flex-flow: column;
+}
 
 /*///////// INICIO /////////*/
+.inicio {
+	height: 100vh;
+	
+}
 
 .linea {
 	margin: 1rem 0;
@@ -14,6 +35,7 @@
 .formas {
 		background-color: var(--marfil);
 	}
+
 .nombre__seccion {
 	font-weight: 300;
 	margin: 0 0 .5rem 0;
@@ -55,7 +77,7 @@
 
 .pie--subirTuEvento {
 	width: 100%;
-	height: 80%;
+	height: 2rem;
 }
 
 .pie__logo{
